# percipio

./: .clang-format  .clang-tidy  .gitignore  BUILD  LICENSE  MODULE.bazel  WORKSPACE  code_style.md  code_style.rst  developer_guide.md  developer_guide.rst  readme.md  readme.rst
bazel/: BUILD  cc.bzl  version.bzl
bazel/cc_code_style_check/: BUILD  rules.bzl  toolchain.bzl
bazel/cc_lint/: BUILD  rules.bzl  toolchain.bzl
build_tools/cc/: BUILD  build_host_runfiles.py  clang_format.py  clang_tidy.py
build_tools/cc/cc_build_utils/: BUILD
build_tools/cc/clang_format/: BUILD
bzl_host_tool_runfiles_bug/: BUILD
bzl_host_tool_runfiles_bug/src/: main.cc
cc/: BUILD
cc/algorithm/: BUILD
cc/features/: BUILD
cc/hello_world/: BUILD
cc/patterns/: BUILD
cc/rng/: BUILD
cc/thread/: BUILD
cc/util/: BUILD
code_tools/: BUILD
code_tools/src/: bsd_3_clause_license.py  change_license.py  gpl3_license.py  mit_license.py
go/: BUILD
go/tutorials/: BUILD
go/tutorials/t0hello/: BUILD.bazel  go.mod  t0hello.go
issues/bzl_cc_libs_includes/: BUILD  readme.md
kotlin/: BUILD
kotlin/basics/: BUILD
kotlin/idioms/: BUILD
machine_learning/neural_networks_and_deep_learning/: BUILD  cost_functions.py  exercises.md  notes.md
nl_json/: BUILD
nl_json/src/: main.cc
objc/: BUILD
objc/metal/: BUILD
objc/obj_life_cycle/: BUILD
objc/tour/: BUILD
python/: BUILD
python/coroutines/: BUILD
pytorch/: BUILD
sh/: BUILD
sh/samples/: BUILD
swift/: BUILD
swift/tutorials/: BUILD
tools/: BUILD
tools/src/: dice_rolls_odds.py  gen_name.py
(+351 files in other folders)
