load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "t0hello_lib",
    srcs = ["t0hello.go"],
    importpath = "github.com/xykivo/percipio/tutorials/t0hello",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "t0hello",
    embed = [":t0hello_lib"],
    visibility = ["//visibility:public"],
)
